Fixed icons being invisible

--- a/components/styling/home.module.css
+++ b/components/styling/home.module.css
@@ -131,6 +131,8 @@
     vertical-align: sub;
     margin-right: 12px;
     margin-bottom: 3px;
+    background: unset !important;
+    color: #ffffff !important;
 }
 
 .cardIconPosition {
